--- a/static/assets/css/style.css
+++ b/static/assets/css/style.css
@@ -19,11 +19,26 @@
     margin: 0 auto;
 }
 
+.container-fluid {
+    width: 100%;
+}
+
 .header-section .navbar {
     display: flex;
     align-items: center;
     justify-content: space-between;
     padding: 12px 0;
+}
+
+.header-section.scrolled {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    box-shadow: rgba(145, 158, 171, 0.16) 0px 8px 16px 0px;
+    background-color: #fff;
+    opacity: 0.9;
+    z-index: 10;
 }
 
 .header-section .navbar .nav-items {
@@ -167,6 +182,7 @@ input:disabled {
 }
 
 .tabcontent {
+    display: none;
     padding: 16px;
 }
 
@@ -210,6 +226,10 @@ input:disabled {
     font-size: 16px;
     padding: 4px;
     cursor: pointer;
+}
+
+.question-desc {
+    display: none;
 }
 
 .question .question-desc p {
