--- a/templates/create-sell.html
+++ b/templates/create-sell.html
@@ -61,7 +61,7 @@
                         <div class="form-control">
                             <div class="form-label">Số lượng mua</div>
                             <div class="flex-bw">
-                                <input type="number" name="buy-amount" min="0" step="0.00001" id="buy-amount" placeholder="0" required>
+                                <input type="number" name="buy-amount" min="0" step="0.00001" id="buy-amount" placeholder="0">
                                 <select name="buy-option" id="buy-option">
                                     <option value="BTC" data-price="{{BTC.price}}" data-amount="{{BTC.price|intcomma}}">BTC</option>
                                     <option value="ETH" data-price="{{ETH.price}}" data-amount="{{ETH.price|intcomma}}">ETH</option>
@@ -73,8 +73,8 @@
                         <div class="form-control">
                             <div class="form-label">Bạn sẽ gửi</div>
                             <div class="flex-bw">
-                                <input type="number" name="buy-transfer" id="buy-transfer" placeholder="0" readonly>
-                                <select name="buy-currency" id="buy-currency">
+                                <input type="number" name="" id="buy-transfer" placeholder="0" disabled>
+                                <select name="" id="buy-currency">
                                     <option value="VND">VND</option>
                                 </select>
                             </div>
